<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rtc_adddress"
        android:text="@string/server_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/rtc_adddress_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/rtc_port"
        android:text="@string/server_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/rtc_port_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/rtc_device_name"
        android:text="@string/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/rtc_device_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

</LinearLayout>